--- a/src/layouts/home-section/regionTour/style.module.css
+++ b/src/layouts/home-section/regionTour/style.module.css
@@ -1,5 +1,5 @@
 .regionTour {
-  background-image: url("/images/bg-tour3mien.jpg");
+  background-image: url("/images/bg-region-tour.png");
   background-position: top;
   background-repeat: no-repeat;
   background-size: cover;
