--- a/src/app/(public)/blog/style.module.css
+++ b/src/app/(public)/blog/style.module.css
@@ -1,5 +1,5 @@
 .banner {
-  background: url("/images/banner1-about.jpeg");
+  background: url("/images/banner-tour.jpg");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
