--- a/src/layouts/home-section/tours/style.module.css
+++ b/src/layouts/home-section/tours/style.module.css
@@ -1,5 +1,4 @@
 .tours {
-  /* background: #faf5ef; */
   background: url("/images/bg-tours.png");
   background-attachment: fixed;
   background-position: center;
@@ -8,7 +7,7 @@
   padding-bottom: 100px;
   position: relative;
 }
-/* .tours::after {
+.tours::after {
   position: absolute;
   content: "";
   top: 0;
@@ -17,7 +16,7 @@
   bottom: 0;
   z-index: 0;
   background-color: #00000042;
-} */
+}
 
 .stickyBox {
   padding-top: 10.88rem;
@@ -25,10 +24,4 @@
   position: sticky;
   top: 0;
   font-weight: 600;
-}
-.stickyBox h4 {
-  font-size: var(--size-sub-heading);
-}
-.stickyBox h2 {
-  font-size: var(--size-heading);
 }
